5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1807_2565.log
== SUBMITION (2019-06-08 14:09:10) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: "))
horas_presentes = array(eval(input("Presencas: "))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
0.563094
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 3
    horas_presentes = array(eval(input("Presencas: "))
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:09:35) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
1.842
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[2 0 3]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:09:39) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
2.34063
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
Notas finais: Presencas: carga horaria:[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:09:40) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
2.11543
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
Notas finais: Presencas: carga horaria:[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[2 0 3]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:09:41) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
5.02537
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
Notas finais: Presencas: carga horaria:[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:09:42) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
7.03969
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 1 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[2 0 3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:09:48) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
8.51979
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 1 4]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[2 0 3]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:09:49) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.38767
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 1 4]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:09:49) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
3.19568
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:09:49) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
1.56233
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2565/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:10:18) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
1.91889
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:10:19) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
2.45752
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:10:20) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
3.67207
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:10:20) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.85168
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:10:20) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
9.09584
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:10:20) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
9.90163
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 1 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[2 0 3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:10:22) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
2.12269
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2565/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:51) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
5.28983
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:51) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
7.17029
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[2 0 3]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:51) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
7.62145
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:52) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
0.419269
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:32:57) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
1.79158
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:32:58) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
1.76316
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 0 2]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:32:58) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
2.28891
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:32:58) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
4.13571
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:32:59) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.07747
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 1 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:00) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
9.9653
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 1 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[2 0 3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:17) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
3.54192
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:18) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
7.1858
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:19) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
8.27293
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:20) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
9.37944
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:21) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
10.2604
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:22) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
9.81375
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 1 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[2 0 3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:36) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.07164
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:37) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.07788
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:38) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
5.94239
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:38) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.16182
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:40) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.32156
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:41) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.27896
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 1 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[2 0 3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:56) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
5.48489
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:57) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
5.48638
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:58) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.03912
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:33:59) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.37237
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:34:00) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.2856
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:34:00) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
6.64644
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 2]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 1 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[2 0 3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:34:11) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
4.33959
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
Notas finais: Presencas: carga horaria:[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
Notas finais: Presencas: carga horaria:[5 1 4]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:34:12) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
2.12831
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2565/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:34:13) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
3.23945
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
Notas finais: Presencas: carga horaria:[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
Notas finais: Presencas: carga horaria:[5 1 4]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:07:01) 
-- CODE:
from numpy import*
medias_finais = array(eval(input("Notas finais: ")))
horas_presentes = array(eval(input("Presencas: ")))

carga_horaria = int(input("carga horaria:"))

resul = zeros(3, dtype=int)

frequencia = 75/100 * carga_horaria

for i in range(size(medias_finais)):
	
	if(medias_finais[i] >= 5 and horas_presentes[i] >= frequencia ):
		resul[0] = resul[0] + 1
		
	elif(medias_finais[i] < 5 and 0 <= horas_presentes[i] <= carga_horaria ):
		resul[1] = resul[1] + 1
		
	elif(0 <= medias_finais[i] <= 10 and horas_presentes[i] < frequencia ):
		resul[2] = resul[2] + 1
		
		
print(resul)
-- EXECUTION TIME:
1.15306
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
